# Car-Price-Prediction-ML

./: README.md  cars_selling_prediction.ipynb  cars_selling_prediction.py  cars_selling_prediction_app.py  cleaned_cars_dashboard.csv  main.py  model.pkl  pyproject.toml  requirements.txt  scaler.pkl
.devcontainer/: devcontainer.json
